2005-07-14  Ryan Lortie  <desrt@desrt.ca>

	* power-management.c (power_management_getinfo): Remove erroneous
	  cast to (guint) on comparing -1 to status->parcent (which is
	  actually signed).  Patch from Benoît Dejean <TazForEver@dlfp.org>.

2005-07-13  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c: Fix a typo in my last commit.

2005-07-13  Dennis Cranston  <dennis_cranston@yahoo.com>

	* battstat_applet.glade:  HIG fixes for capplet (vertical 
	  spacing should be 6 pixels, not 0 or 3 pixels).

2005-07-13  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c: Remove use of magic -1 value to denote end
	  of GdkColor entries and instead use G_N_ELEMENTS() in for loops.

	  Remove unused colour 'gray'.

	  Call gdk_colormap_get_system() only once (instead of 9 times).

2005-07-09  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c: Move most code out of help_cb and into a
	  generic battstat_show_help function that can be used by the
	  help button callback in the preferences dialog.

	* battstat.h: Add prototype for battstat_show_help.

	* properties.c: Remove prefs_help_cb function (which was broken)
	  and replace it with a call to battstat_show_help();

	* docs/C/battstat.xml: Remove all talk of suspending.

2005-07-08  Ryan Lortie  <desrt@desrt.ca>

	Removal of suspend support as per bug #303496.

	* GNOME_BattstatApplet.xml: Remove "suspend" menu item.

	* battstat.h: Remove suspend_entry, suspend_cmd structure members.

	* battstat.schemas.in: Remove suspend stuff from gconf.

	* battstat_applet.c: Remove suspend_cb, double click handler,
	  other assorted suspend-related stuff.

	* battstat_applet.glade: Remove suspend command entry field.

	* properties.c: Remove suspend_changed and related code.

2005-07-08  Ryan Lortie  <desrt@desrt.ca>

	Properties dialog rework.  See bug #307231.

	* battstat.h: Remove 3 battstat struct members related to old
	  properties code.

	* battstat_applet.glade: Rework properties as per comment #3 in bug.
